fix(ReelSlideshow): add braces around jsx expression

--- a/src/components/ReelSlideshow.astro
+++ b/src/components/ReelSlideshow.astro
@@ -34,7 +34,7 @@ const backdropAlpha = 0.75
     {frontmatter.reel.placeholderStills.map((still, i) => (
       <div
         data-slideshow-backdrop
-        style=`background-color: rgb(${slideAvgColorsRGB[i]}, ${backdropAlpha})`
+        style={`background-color: rgb(${slideAvgColorsRGB[i]}, ${backdropAlpha})`}
       ></div>
     ))}
     
