--- a/src/components/AboutSection.astro
+++ b/src/components/AboutSection.astro
@@ -1,5 +1,8 @@
 ---
-import { Content as AboutContent, frontmatter as about } from '../content/About.md'
+import {
+  Content as AboutContent,
+  frontmatter as about,
+} from '../content/About.md'
 import Button from './Button.astro'
 ---
 
@@ -7,33 +10,35 @@ import Button from './Button.astro'
   <h3>{about.title}</h3>
 
   <div class="bleed-r">
-    <img src={about.image.url} alt={about.image.alt} class="portrait">
+    <img src={about.image.url} alt={about.image.alt} class="portrait" />
   </div>
 
   <div class="contact">
-    <Button 
+    <Button
       href={`mailto:${about.email_button.address}`}
       label={about.email_button.label}
     />
 
     <nav class="social">
-      {about.social_links.map(service => (
-        <a href={service.url}>{service.label}</a>
-      ))}
+      {
+        about.social_links.map((service) => (
+          <a href={service.url}>{service.label}</a>
+        ))
+      }
     </nav>
   </div>
 
   <AboutContent />
 </section>
 
-<style >
-.section {
-  max-width: 36rem;
-}
-
-@media (min-width: 36rem) {
-  .bleed-r {
-    margin-right: 0;
+<style>
+  .section {
+    max-width: 36rem;
   }
-}
+
+  @media (min-width: 36rem) {
+    .bleed-r {
+      margin-right: 0;
+    }
+  }
 </style>
