chore: upgrade astro to 3.x

--- a/src/components/AboutSection.astro
+++ b/src/components/AboutSection.astro
@@ -2,7 +2,7 @@
 import {
   Content as AboutContent,
   frontmatter as about,
-} from '../content/About.md'
+} from '../user-content/About.md'
 import Button from './Button.astro'
 ---
 
