--- a/src/components/ProjectSets.astro
+++ b/src/components/ProjectSets.astro
@@ -1,5 +1,5 @@
 ---
-import { frontmatter as projectData } from '../content/Projects.md'
+import { frontmatter as projectData } from '../user-content/Projects.md'
 import { imagePath } from '../settings/siteInfo'
 import Project from './Project.svelte'
 import { marked } from 'marked'
@@ -51,7 +51,7 @@ const getProjectWithImageDimsData = async (project) => {
 
 {
   projectData.projectSets.map((projectSet, i) => (
-    <section class="section" id={i === 0 && 'first-section'}>
+    <section class="section" id={i === 0 ? 'first-section' : ''}>
       <h3>{projectSet.heading}</h3>
 
       {projectSet.projects.map(async (project) => (
