fix(css): get rule color css var to work properly

--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -2,6 +2,8 @@
 import { frontmatter as metadata } from '../settings/Settings.md'
 import Monogram from '../components/Monogram.astro'
 import '../styles/global.scss'
+
+const htmlString = `<style>:root { --color-vertical-rule: ${metadata.themeColors.verticalRule}; }</style>`
 ---
 
 <html lang="en" class="no-js">
@@ -15,10 +17,13 @@ import '../styles/global.scss'
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
     <script>
       document.documentElement.className =
         document.documentElement.className.replace(/\bno-js\b/g, '') + ' js '
     </script>
+
+    <Fragment set:html={htmlString} />
 
     <style>
       @font-face {
