chore: add `@ts-nocheck` to .astro file <script>
Remove annoying 'problems' reported by TS error checking.

--- a/src/components/ReelSlideshow.astro
+++ b/src/components/ReelSlideshow.astro
@@ -104,6 +104,8 @@ const backdropAlpha = 0.75
 </>
 
 <script>
+  // @ts-nocheck // prevent VS Code from showing TypeScript 'problems' since this is just JavaScript
+
   const slideshow = () => {
     let slideCounter = 0
     const interval = 3000
