perf: add lazy loading to monogram in footer

--- a/src/components/Monogram.astro
+++ b/src/components/Monogram.astro
@@ -6,5 +6,6 @@ const widthInRem = 3
 <img
   style=`width: ${widthInRem}rem; height: ${widthInRem * aspectRatio}rem;`
   src="/img/monogram.svg"
+  loading="lazy"
   alt=""
 />
