a11y: add alt to reel play button

--- a/src/components/ReelSlideshow.astro
+++ b/src/components/ReelSlideshow.astro
@@ -67,7 +67,11 @@ const backdropAlpha = 0.75
     </div>
 
     <div class="play-button">
-      <img src="/img/play.svg" alt="" class="play-button-icon" />
+      <img
+        src="/img/play.svg"
+        alt="Play Andrew Aiello's reel"
+        class="play-button-icon"
+      />
     </div>
   </a>
 
