--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -46,6 +46,16 @@
   border-radius: 2px;
 }
 
+.screen-reader-only:not(:focus):not(:active) {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
 html {
   background-color: var(--color-bg);
   -webkit-text-size-adjust: none;
